[package]
name = "fmt-cmp"
version = "0.1.2"
edition = "2018"
rust-version = "1.41"
description = "Traits and utilities for lexicographically comparing values in their `Display` representations"
readme = "README.md"
repository = "https://github.com/tesaguri/fmt-cmp.git"
license = "MIT OR Apache-2.0"
keywords = ["fmt", "no_std"]
categories = ["no-std", "rust-patterns", "value-formatting"]
exclude = [".*"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(fmt_cmp_semver_exempt)']

[features]
default = ["alloc"]

alloc = []
std = ["alloc"]

[dev-dependencies]
itoa = "1"
